-Build add admin section -Fix link wrap

--- a/css/app.css
+++ b/css/app.css
@@ -49,3 +49,17 @@
 #appFooter li:first-child {
   list-style: none;
 }
+
+/* line 55, ../sass/app.scss */
+a {
+  white-space: pre-wrap;
+  /* css-3 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */
+}
